feature:Implemented multi condition query function

--- a/hejiayun-master/hejiayun-web/src/main/resources/application.yml
+++ b/hejiayun-master/hejiayun-web/src/main/resources/application.yml
@@ -17,5 +17,13 @@ logging:
     com.zdf: debug
     org.springframework: warn
 
+pagehelper:
+  # 指定数据库，可以不配置，pagehelper插件会自动检测数据库的类型。
+  helperDialect: mysql
+  # 分页合理化参数默认false，当该参数设置为true 时，pageNum <= 0 时，默认显示第一页，pageNum 超过 pageSize 时，显示最后一页。
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
