--- a/hejiayun-master/hejiayun-system/src/main/resources/application-dev.yml
+++ b/hejiayun-master/hejiayun-system/src/main/resources/application-dev.yml
@@ -7,7 +7,6 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
 
     druid:
-      # 初始连接数
       initialSize: 5
       # 最小连接池数量
       minIdle: 10
@@ -36,7 +35,7 @@ spring:
       statViewServlet:
         enabled: true
         # 设置白名单，不填则允许所有访问
-        allow: /druid/*
+        url-pattern: /druid/*
         # 控制台管理用户名和密码
         login-username: root
         login-password: root
