--- a/hejiayun-master/pom.xml
+++ b/hejiayun-master/pom.xml
@@ -35,10 +35,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
@@ -48,6 +44,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>3.2.4</version>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -78,7 +79,6 @@
             <artifactId>easyexcel</artifactId>
             <version>3.3.4</version>
         </dependency>
-
     </dependencies>
 
     <build>
